Fixed "About" dropdown alignment
Switched to react-bootstrap 2.0 beta to utilise the fix for right-aligned dropdowns in the navbar. This in turn fixed the issue with the "About" menu dropdown rendering off the screen.
Fixed alignment of dropdowns in the collapsed navbar.

--- a/src/assets/stylesheets/application.scss
+++ b/src/assets/stylesheets/application.scss
@@ -66,3 +66,7 @@ h3 {
 .dropdown-divider {
   background-color: $white;
 }
+
+.nav-item {
+  padding-left: 0.5em;
+}
